Cover: Fix matrix alignment issue. (#28361)
For context, position absolute, combined with width/height 100% works in most cases, but is still subject to the box model, collapsing margins, and other hard-to-predict things. By replacing those with top/right/bottom/left values of zero, we set neither widths nor heights, but accomplish the same.

--- a/packages/block-library/src/cover/style.scss
+++ b/packages/block-library/src/cover/style.scss
@@ -172,8 +172,10 @@
 .wp-block-cover__image-background,
 .wp-block-cover__video-background {
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 	object-fit: cover;
 }
 
